Fixing styles to remove ugly overflows

--- a/src/components/ArtistByAlbums/ArtistByAlbums.less
+++ b/src/components/ArtistByAlbums/ArtistByAlbums.less
@@ -9,3 +9,13 @@
     overflow: hidden;
     text-overflow: ellipsis;
 }
+
+.artists-by-albums-container {
+    overflow: auto;
+}
+
+@media (max-width: 767px) {
+    .artists-by-albums-container {
+        overflow: initial;
+    }
+}
